--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div>
         <h1>Provide Traffic Light Input</h1>
-        <div>Content should be in similar to "G20;Y30;R10" in G, Y or R and with seconds for each.</div>
+        <div>Content should be in similar to "G20;Y30;R10;" in G, Y or R and with seconds for each.</div>
         <br>
 
         <button id="start_button">Start Lights</button>
@@ -25,14 +25,14 @@
     <br>
 
     <span>Time Remaining in Light: </span>
-    <span><input type="text" id="remaining_time"></span>
+    <span id="remaining_time"></span>
     
     <div class="lightbox">
-        <div class="circle" id="redlight"></div>
+        <div class="circle" id="red_light"></div>
         <br>
-        <div class="circle" id="yellowlight"></div>
+        <div class="circle" id="yellow_light"></div>
         <br>
-        <div class="circle" id="greenlight"></div>
+        <div class="circle" id="green_light"></div>
     </div>
 
 </body>
